meta-swi-mdm9x28-fx30/recipes-core/init-ifupdown/files/ip6tables.rules
# Generated by ip6tables-save v1.6.0 on Thu Oct 25 16:23:26 2018
*filter
:INPUT ACCEPT [1:72]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [4:288]
-A INPUT -i rmnet_data0 -p udp -m udp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p udp -m udp --sport 5686 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p udp -m udp --sport 5684 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p ipv6-icmp -m icmp6 --icmpv6-type 129 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i rmnet_data0 -j DROP
-A INPUT -i eth0 -p ipv6-icmp -j ACCEPT
-A INPUT -i eth0 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i eth0 -j DROP
COMMIT
# Completed on Thu Oct 25 16:23:26 2018
